src/styles/Header.css
/*-------------------------------------------------------------------------------
 HEADER
 -------------------------------------------------------------------------------*/
header {
  position: fixed;
  top: 0px;
  left: 0px;
  height: 80px;
  width: 100%;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
  box-sizing: border-box;
  z-index: 1;
}

#header-inner {
  justify-content: space-between;
  align-items: center;
}

/* logo
 -------------------------------------------------------------------------------*/
.logo {
  display: inline-block;
  width: 40px;
  height: 40px;
  background: url("/logo-solid.png") center no-repeat;
  background-size: 40px 40px;
  z-index: 1;
  transition: all .2s;
}

.logo:hover {
  opacity: .8;
}

/* gnav
 -------------------------------------------------------------------------------*/
.gnav-list li {
  position: relative;
  margin-left: 10px;
  margin-right: 10px;
  line-height: 1.25;
  cursor: pointer;
}

.gnav-list li:before,
.gnav-list li:after {
  position: absolute;
  display: block;
  content: '';
  width: 0;
  bottom: 0;
  border-bottom: 1px solid beige;
  transition: all .2s linear;
}

.gnav-list li:before {
  left: 0;
}
.gnav-list li:after {
  right: 0;
}

.gnav-list li:hover:before,
.gnav-list li:hover:after {
  width: 50%;
}

.gnav-list-link,
.gnav-list-link:hover {
  font-family: 'Gothic';
  font-size: 16px;
  color: beige;
}

